# pong-cli

./: .gitignore  Cargo.toml  LICENSE  PongCLI.desktop  README.md  settings.ron  vimrc
.vim/: coc-settings.json
src/: color.rs  geo.rs  helpers.rs  lib.rs  main.rs  pong.rs  resources.rs  round_down.rs  settings.rs
src/components/: ball.rs  collision.rs  confined.rs  drawable.rs  mod.rs  paddle.rs  paddle_ai.rs  position.rs  size.rs  velocity.rs
src/input/: mod.rs
src/resources/: deltatime.rs  mod.rs  running.rs  scores.rs  should_reset.rs
src/settings/: ball_spawn_directions.rs  char_data.rs  load.rs  mod.rs
src/style/: mod.rs  style_data.rs
src/systems/: ball_bounce.rs  ball_score.rs  confine_entities.rs  control_paddles.rs  deltatime.rs  draw_entities.rs  draw_room.rs  draw_scores_system.rs  input.rs  mod.rs  move_entities.rs  move_paddles.rs  paddle_ai.rs  paddle_ai_system.rs  reset.rs  spawn_ball.rs
src/systems/move_entities/: collision.rs  mod.rs
