[package]
name = "pong-cli"
version = "0.1.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
include = [
    "/Cargo.toml",
    "/src",
    "/settings.ron",
]
description = "Play pong from the command-line!"
repository = "https://github.com/Noah2610/pong-cli"
readme = "README.md"
keywords = ["pong", "game", "cli"]
categories = ["games", "command-line-utilities"]
license = "MIT"

[dependencies]
crossterm = "0.11.1"
ron       = "0.5.1"
serde     = "1.0.101"
specs     = { version = "0.15.1", features = ["specs-derive", "shred-derive"] }
rand      = { version = "0.7.2", optional = true }

[features]
default = ["random"]

nightly = ["specs/nightly"]
random  = ["rand"]
