[package]
name = "pong-cli"
version = "1.0.1"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
include = [
    "/Cargo.toml",
    "/src",
    "/settings.ron",
]
description = "Play pong from the command-line!"
repository = "https://github.com/Noah2610/pong-cli"
readme = "README.md"
keywords = ["pong", "game", "cli"]
categories = ["games", "command-line-utilities"]
license = "MIT"

[dependencies]
dirs = "4.0.0"
ron = "0.7.0"
serde = "1.0.136"

[dependencies.crossterm]
version = "0.12.1"
default_features = false
features = ["input", "cursor", "screen", "serde"]

[dependencies.specs]
version  = "0.15.1"
features = ["specs-derive", "shred-derive"]

[dependencies.rand]
version  = "0.7.2"
optional = true

[features]
default = ["random", "style"]

random  = ["rand"]
style   = ["crossterm/style"]
nightly = ["specs/nightly"]
